# Thesis

./: README.md  main.py  pyproject.toml
data/: data.py  pollution.py
models/: tfidf_logreg.py  tfidf_lsvm.py  transformer.py  utilities.py
