[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=1.1.1",
    "evaluate>=0.2.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
